fix: minor review changes
